--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,20 @@
-.App {
-  text-align: center;
+
+.users-albums {
+  /* display: flex; */
+  display: inline;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.users, .albums {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.users {
+  float: left;
+  margin-left: 150px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.albums {
+  float: right;
+  margin-right: 150px;
 }
