--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,34 @@
+.App {
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  margin: 0 auto;
+}
 
 .users-albums {
-  /* display: flex; */
-  display: inline;
+  display: flex;
+  justify-content: space-between;
 }
 
 .users, .albums {
   display: flex;
   flex-direction: column;
+  width: 50%;
 }
 
-.users {
-  float: left;
-  margin-left: 150px;
+.photos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 50px auto 0;
 }
 
-.albums {
-  float: right;
-  margin-right: 150px;
+.photo {
+  width: 250px;
+}
+
+p {
+  text-align: center;
+  width: 150px;
+  font-size: 10px;
 }
